# toxtUtil

./: .clang_complete  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  util.cpp  util.hpp
tests/: .clang_complete  tests.cpp
